playbooks/resources/coherence/Service.yml
# spring boot service enpoints
---
apiVersion: v1
kind: Service
metadata:
  name: coherence-imdg
  namespace: coherence
  labels:
    app.kubernetes.io/name: imdg-spring-boot
    type: spring-boot
spec:
  selector:
    coherenceCluster: imdg
    coherenceComponent: coherencePod
    coherenceDeployment: imdg
    coherenceRole: imdg
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
    - name: management
      protocol: TCP
      port: 8090
      targetPort: 8090
---
